[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.21.0",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "pymilvus>=2.5.5",
    "sentence-transformers>=3.4.1",
    "unstructured[pdf]>=0.17.0",
    "vllm",
]
